--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -4,9 +4,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700;800;900&family=Roboto&family=Rochester&display=swap');
 
+html,
+body {
+	height: 100vh;
+	overflow: hidden;
+}
+
 body {
 	@apply bg-bg-color text-base text-black;
 	font-family: 'Golos Text', sans-serif;
+}
+
+.catalog {
+	height: calc(100vh - 150px);
 }
 
 .disabled {
